Fix `z-index` for nav.

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -14,7 +14,7 @@
     visibility: hidden;
     opacity: 0;
     transition: visibility 0.6s ease-in-out, opacity 0.6s ease-in-out;
-    z-index: 1;
+    z-index: 10;
 
     &__list {
         height: calc(100% - 3.45rem);
@@ -124,7 +124,7 @@
             filter: brightness(0) invert(1);
 
             &--gh {
-                width: 10.2433rem;
+                width: 10.24375rem;
                 height: 4.65rem;
             }
 
